more stuff towards the new biomes